--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -9940,6 +9940,111 @@ console.log(result);
 
 ```
 
+---
+
+## 461. 汉明距离
+
+两个整数之间的 汉明距离 指的是这两个数字对应二进制位不同的位置的数目。
+
+给你两个整数 x 和 y，计算并返回它们之间的汉明距离。
+
+根据以上定义，我们使用异或运算，记为 ⊕，当且仅当输入位不同时输出为 1。
+
+```js
+/**
+ * @param {number} x
+ * @param {number} y
+ * @return {number}
+ */
+var hammingDistance = function(x, y) {
+    x ^= y;
+    x = x.toString(2);
+    let ans = 0;
+    for (let i = 0; i < x.length; i++){
+        if (x[i] === "1") {
+            ans++;
+        }
+    }
+    return ans;
+};
+
+let  m = 1, n = 4;
+let result = hammingDistance(m, n);
+console.log(result);
+```
+
+移位实现位计数
+
+```js
+var hammingDistance = function(x, y) {
+    let s = x ^ y, ret = 0;
+    while (s != 0) {
+        ret += s & 1;
+        s >>= 1;
+    }
+    return ret;
+};
+```
+
+Brian Kernighan 算法
+
+```js
+var hammingDistance = function(x, y) {
+    let s = x ^ y, ret = 0;
+    while (s != 0) {
+        s &= s - 1;
+        ret++;
+    }
+    return ret;
+};
+```
+
+---
+
+## 463.岛屿的周长
+
+给定一个 row x col 的二维网格地图 grid ，其中：grid[i][j] = 1 表示陆地， grid[i][j] = 0 表示水域。
+
+网格中的格子 水平和垂直 方向相连（对角线方向不相连）。整个网格被水完全包围，但其中恰好有一个岛屿（或者说，一个或多个表示陆地的格子相连组成的岛屿）。
+
+岛屿中没有“湖”（“湖” 指水域在岛屿内部且不和岛屿周围的水相连）。格子是边长为 1 的正方形。网格为长方形，且宽度和高度均不超过 100 。计算这个岛屿的周长。
+
+提示：
+
+row == grid.length
+col == grid[i].length
+1 <= row, col <= 100
+grid[i][j] 为 0 或 1
+
+```js
+/**
+ * @param {number[][]} grid
+ * @return {number}
+ */
+var islandPerimeter = function(grid) {
+    let perimeter = 0;
+    const dirs = [[0, 1], [0, -1], [1, 0], [-1, 0]];
+    for (let row = 0; row < grid.length; row++){
+        for (let col = 0; col < grid[0].length; col++){
+            if (grid[row][col] === 1) {
+                dirs.forEach((dir) =>{
+                    if (row + dir[0] < 0 || row + dir[0] > grid.length - 1 || col + dir[1] < 0 || col + dir[1] > grid[0].length - 1 || grid[row + dir[0]][col + dir[1]] === 0 ) {
+                        perimeter++;
+                    }
+                });
+            }
+        }
+    }
+    return perimeter;
+};
+
+let grid = [[0,1,0,0],[1,1,1,0],[0,1,0,0],[1,1,0,0]];
+let result = islandPerimeter(grid);
+console.log(result);
+```
+
+---
+
 
 
 
@@ -10194,6 +10299,43 @@ console.log(result);
 
 
 ---
+## 476. 数字的补数
+
+对整数的二进制表示取反（0 变 1 ，1 变 0）后，再转换为十进制表示，可以得到这个整数的补数。
+
+例如，整数 5 的二进制表示是 "101" ，取反后得到 "010" ，再转回十进制表示得到补数 2 。
+给你一个整数 num ，输出它的补数。
+
+提示：
+
+1 <= num < 2^31
+
+```js
+/**
+ * @param {number} num
+ * @return {number}
+ */
+var findComplement = function(num) {
+    let highBit = 0;
+    //我们需要首先找到 num 二进制表示最高位的那个 1，再将这个 1 以及更低的位进行取反。
+    for (let i = 1; i <= 30; i++){
+        if (num >= 1 << i){
+            highBit = i;
+        }else{
+            break;
+        }
+    }
+    let mask = highBit === 30 ? 0x7fffffff : (1 << (highBit + 1)) - 1;
+    return num ^ mask;
+};
+
+let num = 5;
+let result = findComplement(num);
+console.log(result);
+```
+
+---
+
 ## 479.最大回文数乘积
 
 给定一个整数 n ，返回 可表示为两个 n 位整数乘积的 最大回文整数 。因为答案可能非常大，所以返回它对 1337 取余 。
@@ -10228,7 +10370,100 @@ console.log(result);
  console.log(result);
  ```
 
-​     
+
+
+---
+
+## 482. 密钥格式化
+
+给定一个许可密钥字符串 s，仅由字母、数字字符和破折号组成。字符串由 n 个破折号分成 n + 1 组。你也会得到一个整数 k 。
+
+我们想要重新格式化字符串 s，使每一组包含 k 个字符，除了第一组，它可以比 k 短，但仍然必须包含至少一个字符。此外，两组之间必须插入破折号，并且应该将所有小写字母转换为大写字母。
+
+返回 重新格式化的许可密钥 。
+
+提示:
+
+1 <= s.length <= 105
+s 只包含字母、数字和破折号 '-'.
+1 <= k <= 104
+
+```js
+/**
+ * @param {string} s
+ * @param {number} k
+ * @return {string}
+ */
+var licenseKeyFormatting = function(s, k) {
+    s = s.replace(/-/g, "").toUpperCase();
+    let newStr = "";
+    let i;
+    for (i = s.length; i - k > 0; i -= k){
+        newStr = "-" + s.slice(i - k, i) + newStr;
+    }
+    newStr = s.slice(0, i) + newStr;
+    return newStr;
+};
+
+let S = "5F3Z-2e-9-w", k = 4;
+let result = licenseKeyFormatting(S, k);
+console.log(result);
+```
+
+```js
+var licenseKeyFormatting = function(s, k) {
+    const ans = [];
+    let cnt = 0;
+
+    for (let i = s.length - 1; i >= 0; i--) {
+        if (s[i] !== '-') {
+            cnt++;
+            ans.push(s[i].toUpperCase());
+            if (cnt % k === 0) {
+                ans.push("-");
+            }
+        }
+    }
+    if (ans.length > 0 && ans[ans.length - 1] === '-') {
+        ans.pop();
+    }
+    return ans.reverse().join('');
+};
+
+```
+
+---
+
+## 485. 最大连续 1 的个数
+
+给定一个二进制数组 nums ， 计算其中最大连续 1 的个数。
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var findMaxConsecutiveOnes = function(nums) {
+    let ans = 0;
+    let count = 0;
+    for (let i = 0; i < nums.length; i++){
+        if (nums[i] === 1) {
+            count++;
+        }else{
+            ans = Math.max(ans, count);
+            count = 0;
+        }
+    }
+    ans = Math.max(ans, count);
+    return ans;
+};
+
+let nums = [1,1,0,1,1,1];
+let result = findMaxConsecutiveOnes(nums);
+console.log(result);
+```
+
+
 
 
 ---
