--- a/牛客刷题题目/错题笔记.md
+++ b/牛客刷题题目/错题笔记.md
@@ -327,3 +327,29 @@ y:图片距离容器垂直方向距离
 区别4：link支持使用Javascript控制DOM去改变样式；而@import不支持。
 ```
 
+---
+
+## 贝塞尔曲线
+
+transition-timing-function属性指定切换效果的速度。
+
+此属性允许一个过渡效果，以改变其持续时间的速度。
+
+语法：transition-timing-function: cubic-bezier(*n*,*n*,*n*,*n*);
+
+贝塞尔曲线曲线由四个点 P0，P1，P2 和 P3 定义。P0 和 P3 是曲线的起点和终点。P0是（0,0）并且表示初始时间和初始状态，P3是（1,1）并且表示最终时间和最终状态。
+
+| 1    | P0：默认值 (0,0) P1：动态取值 (x1, y1) P2：动态取值 (x2, y2) P3：默认值 (1,1) |
+| ---- | ------------------------------------------------------------ |
+|      |                                                              |
+
+我们需要关注的是 P1 和 P2 两点的取值，而其中 X 轴的取值范围是 0 到 1，当取值超出范围时 cubic-bezier 将失效；Y 轴的取值没有规定，当然也毋须过大。
+
+最直接的理解是，将以一条直线放在范围只有 1 的坐标轴中，并从中间拿出两个点来拉扯（X 轴的取值区间是 [0, 1]，Y 轴任意），最后形成的曲线就是动画的速度曲线。
+
+cubic-bezier() 可用于 [animation-timing-function](https://www.runoob.com/cssref/css3-pr-animation-timing-function.html) 和 [transition-timing-function](https://www.runoob.com/cssref/css3-pr-transition-timing-function.html) 属性。
+
+语法：cubic-bezier(x1,y1,x2,y2)
+
+---
+
