--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -10463,10 +10463,109 @@ let result = findMaxConsecutiveOnes(nums);
 console.log(result);
 ```
 
+---
+
+## 492. 构造矩形
+
+作为一位web开发者， 懂得怎样去规划一个页面的尺寸是很重要的。 所以，现给定一个具体的矩形页面面积，你的任务是设计一个长度为 L 和宽度为 W 且满足以下要求的矩形的页面。要求：
+
+你设计的矩形页面必须等于给定的目标面积。
+宽度 W 不应大于长度 L ，换言之，要求 L >= W 。
+长度 L 和宽度 W 之间的差距应当尽可能小。
+返回一个 数组 [L, W]，其中 L 和 W 是你按照顺序设计的网页的长度和宽度。
+
+提示:
+
+1 <= area <= 107
+
+```js
+/**
+ * @param {number} area
+ * @return {number[]}
+ */
+var constructRectangle = function(area) {
+    let W = Math.floor(Math.sqrt(area));
+    while (area % W !== 0){
+        W--;
+    }
+    return [area / W, W];
+};
+
+let area = 102;
+let result = constructRectangle(area);
+console.log(result);
+```
+
+
+---
+## 495. 提莫攻击
+
+在《英雄联盟》的世界中，有一个叫 “提莫” 的英雄。他的攻击可以让敌方英雄艾希（编者注：寒冰射手）进入中毒状态。
+
+当提莫攻击艾希，艾希的中毒状态正好持续 duration 秒。
+
+正式地讲，提莫在 t 发起发起攻击意味着艾希在时间区间 [t, t + duration - 1]（含 t 和 t + duration - 1）处于中毒状态。如果提莫在中毒影响结束 前 再次攻击，中毒状态计时器将会 重置 ，在新的攻击之后，中毒影响将会在 duration 秒后结束。
+
+给你一个 非递减 的整数数组 timeSeries ，其中 timeSeries[i] 表示提莫在 timeSeries[i] 秒时对艾希发起攻击，以及一个表示中毒持续时间的整数 duration 。
+
+返回艾希处于中毒状态的 总 秒数。
+
+提示：
+
+1 <= timeSeries.length <= 104
+0 <= timeSeries[i], duration <= 107
+timeSeries 按 非递减 顺序排列
+
+```js
+/**
+ * @param {number[]} timeSeries
+ * @param {number} duration
+ * @return {number}
+ */
+var findPoisonedDuration = function(timeSeries, duration) {
+    let ans = duration;
+    if (duration === 0 || timeSeries.length < 2) {
+        return ans;
+    }
+    for (let i = 1; i < timeSeries.length; i++){
+        ans += Math.min(duration, timeSeries[i] - timeSeries[i - 1]);
+    }
+    return ans;
+};
+
+let timeSeries = [1,4], duration = 2;
+let result = findPoisonedDuration(timeSeries, duration);
+console.log(result);
+```
+
+---
+
+## 496. 下一个更大元素 I
+
+nums1 中数字 x 的 下一个更大元素 是指 x 在 nums2 中对应位置 右侧 的 第一个 比 x 大的元素。
+
+给你两个 没有重复元素 的数组 nums1 和 nums2 ，下标从 0 开始计数，其中nums1 是 nums2 的子集。
+
+对于每个 0 <= i < nums1.length ，找出满足 nums1[i] == nums2[j] 的下标 j ，并且在 nums2 确定 nums2[j] 的 下一个更大元素 。如果不存在下一个更大元素，那么本次查询的答案是 -1 。
+
+返回一个长度为 nums1.length 的数组 ans 作为答案，满足 ans[i] 是如上所述的 下一个更大元素 。
+提示：
+
+1 <= nums1.length <= nums2.length <= 1000
+0 <= nums1[i], nums2[i] <= 104
+nums1和nums2中所有整数 互不相同
+nums1 中的所有整数同样出现在 nums2 中
+
+**进阶：**你可以设计一个时间复杂度为 `O(nums1.length + nums2.length)` 的解决方案吗？
+
+```
+
+```
 
 
 
 ---
+
 ## 504 七进制数
 
 给定一个整数 num，将其转化为 7 进制，并以字符串形式输出。
@@ -14410,6 +14509,49 @@ console.log(result);
 
 
 ---
+## 1299. 将每个元素替换为右侧最大元素
+
+给你一个数组 arr ，请你将每个元素用它右边最大的元素替换，如果是最后一个元素，用 -1 替换。
+
+完成所有替换操作后，请你返回这个数组。
+
+ 提示：
+
+1 <= arr.length <= 104
+1 <= arr[i] <= 105
+
+```js
+/**
+ * @param {number[]} arr
+ * @return {number[]}
+ */
+var replaceElements = function(arr) {
+    let n = arr.length -1;
+    let MaxRightValue = arr[n];
+    arr[n--] = -1;
+    while (n >= 0){
+        let temp = arr[n];
+        arr[n--] = MaxRightValue;
+        MaxRightValue = Math.max(MaxRightValue, temp);
+    }
+    return arr;
+};
+
+let arr = [17,18,5,4,6,1];
+let result = replaceElements(arr);
+console.log(result);
+```
+
+```
+
+```
+
+
+
+---
+
+
+
 ## 1305. 两棵二叉搜索树中的所有元素
 
 给你 root1 和 root2 这两棵二叉搜索树。请你返回一个列表，其中包含 两棵树 中的所有整数并按 升序 排序。
