--- a/牛客刷题题目/前端岗面试高频题.md
+++ b/牛客刷题题目/前端岗面试高频题.md
@@ -2172,13 +2172,35 @@ BFC布局实际应用：
 
 ## 1.1 请问在JS中有哪些数据类型？
 
+JavaScript 语言中类型集合由原始值和对象组成。
+
+**原始值**（直接表示在语言底层的不可变数据）
+
+除对象类型（object）以外的其它任何类型定义的不可变的值（值本身无法被改变）。例如（与 C 语言不同），JavaScript 中字符串是不可变的（译注：如，JavaScript 中**对字符串的操作一定返回了一个新字符串**，原始字符串并没有被改变）。我们称这些类型的值为“*原始值*”。
+
+- 布尔类型
+- Null 类型
+- Undefined 类型
+- 数字类型
+- BigInt 类型
+- 字符串类型
+- 符号类型(symbol)
+
+符号（Symbols）类型是**唯一**且**不可修改**的原始值，并且可以用来作为对象的键(key)，在某些语言当中也有与之相似的类型（原子类型，atoms）。
+
+**对象**（一组属性的集合）
+
+在计算机科学中, 对象（object）是指内存中的可以被[标识符](https://developer.mozilla.org/zh-CN/docs/Glossary/Identifier)引用的一块区域。
+
+
+
 JS数据类型一共有7种，分为基本数据类型和引用数据类型
 
 - **基本数据类型**：字符串（String）、数字(Number)、布尔(Boolean)、空（Null）、未定义（Undefined）、Symbol、BigInt
 
 Symbol：ES6引入了一种新的原始数据类型，表示独一无二的值，**主要用于解决属性名冲突的问题**，做为标记
 
-BigInt：新增数据类型，是ES2020新增加的，精度大于 2^53 - 1， 是比Number类型支持的范围更大的整数值，在对大整数执行数***算时，使用BigInt，会减少整数溢出问题
+BigInt：新增数据类型，是ES2020新增加的，精度大于 2^53 - 1， 是比Number类型支持的范围更大的整数值，在对大整数执行运算时，使用BigInt，会减少整数溢出问题
 
 创建方式：BigInt(value)、在一个整数字面量后面加 n 
 
@@ -2210,7 +2232,7 @@ console.log(a === b);     // true
 
 引用：存储在堆中的对象，存储在变量处的值是一个指针，指向存储对象的内存地址
 
- 原因：**引用类型数据的大小会改变**，不能把它放在栈中，否则会降低变量查寻速度，相反，地址的大小是固定的，可以存在栈中
+ 原因：**引用类型数据的大小会改变**，不能把它放在栈中，否则会降低变量查寻速度，**相反，地址的大小是固定的，可以存在栈中**
 
 （2）不同的内存分配机制也带来了不同的访问机制
 
@@ -2228,9 +2250,9 @@ console.log(a === b);     // true
 
 由于内存分配的差别，两者在传参时也有区别
 
-基本：只是把变量里的值传递给参数，之后参数和这个变量互不影响
+基本：只是把变量里的值传递给参数，**之后参数和这个变量互不影响**
 
-引用：传递的值也就是这个内存地址，这也就是为什么函数内部对这个参数的修改会体现在外部，因为它们都指向同一个对象
+引用：**传递的值也就是这个内存地址**，这也就是为什么函数内部对这个参数的修改会体现在外部，因为它们都指向同一个对象
 
 ----
 
@@ -2261,7 +2283,7 @@ undefined == null; //true
 undefined === null; //false
 ```
 
-ECMAScript 规范： null 和  undefined 的行为很相似，并且都表示 一个无效的值，那么它们所表示的内容也具有相似性，故他们相等。
+ECMAScript 规范： null 和  undefined 的行为很相似，并且**都表示 一个无效的值**，那么它们所表示的内容也具有相似性，故他们相等。
 
 全等操作 === 在比较相等性的时候，两者不是同一类型值，会发生类型转换，故两者不全等。
 
@@ -2308,7 +2330,7 @@ Number(null); // 0
 'object'
 ```
 
-原因：Null类型只有一个null值，该值表示一个空对象指针（出自JavaScript高级程序设计）
+原因：Null类型只有一个null值，该值表示一个**空对象指针**（出自JavaScript高级程序设计）
 
 **typeof的检测原理**：不同的对象在底层都表示为二进制，在js中二进制前**（低）三位存储其类型信息**为：000: Object、100：String、110： Boolean、1： Number。**null的二进制表示全为0，自然前三位也是0，所以执行typeof时会返回"object"。**
 
@@ -2332,9 +2354,9 @@ console.log(typeof(reg));  //object
 
 返回true/false，**只能判断引用类型** ，无法检测基本类型
 
-判断原理：判断一个构造函数的prototype属性所指向的对象是否存在另外一个要检测对象的原型链上。简单来说：能验证new构造函数创建出来的实例，左边的对象是否是右边的类的实例，**属于验证式判断类型**
+判断原理：**判断一个构造函数的prototype属性所指向的对象是否存在另外一个要检测对象的原型链上**。简单来说：能验证new构造函数创建出来的实例，左边的对象是否是右边的类的实例，**属于验证式判断类型**
 
-缺点：**只能用来判断两个对象是否属于实例关系**， 而不能判断一个对象实例具体属于哪种类型（原型链上的都会返回true）
+缺点：**只能用来判断两个对象是否属于实例关系**， 而不能判断一个对象实例具体属于哪种类型（**原型链上的都会返回true**）
 
 ```js
 console.log('abc' instanceof String);// false 
@@ -2398,9 +2420,9 @@ console.log(document.constructor===HTMLDocument);  //true
 
 - **Object.prototype.toString.call(xx)**
 
-返回“[object type]”（字符串），能判断所有类型，万金油方法
+返回“[object type]”（字符串），**能判断所有类型**，万金油方法
 
-判断原理：JS中的所有对象都是继承自Object对象的，通过call方法（显式绑定）改变this指向，利用Object.prototype上的原生toString()方法判断数据类型
+判断原理：**JS中的所有对象都是继承自Object对象的**，通过call方法（显式绑定）改变this指向，利用Object.prototype上的原生toString()方法判断数据类型
 
 ```js
 console.log(Object.prototype.toString.call(123));  // [object Number]
@@ -2431,10 +2453,10 @@ console.log(Object.prototype.toString.call(function(){}));  //[object Function]
 
 - 有布尔值，把false->0， true->1， 调用Number()方法
 - 字符串 和 数值，字符串转数值 ；调用Number()方法
-- 对象 和 非对象，调用对象的valueOf()和toString()方法把对象转换成基础类型的值再比较，除Date对象外，会优先尝试使用valueOf()方法
-- 有一个是NaN， 则返回false。 即使两个都是NaN，也返回false，因为按照规则，NaN不等于NaN
+- 对象 和 非对象，调用对象的valueOf()和toString()方法把对象转换成基础类型的值再比较，**除Date对象外，会优先尝试使用valueOf()方法**
+- 有一个是NaN， 则返回false。 即使两个都是NaN，也返回false，**因为按照规则，NaN不等于NaN**
 - 两个操作数都是对象，则比较他们是不是同一个对象，如果指向的是同一个对象，则返回ture 因为对象存的是地址值
-- 比较相等性之前， 不能将 null和 undefined转换成其他任何值
+- 比较相等性之前， **不能将 null和 undefined转换成其他任何值**
 
 ```bash
 > 1==true
@@ -2447,6 +2469,7 @@ false
 true
 > []==""
 true
+
 > []==false
 true
 > []=={}
@@ -2459,6 +2482,7 @@ false
 true
 > 1==NaN
 false
+
 > 0==undefined
 false
 > 0==null
@@ -2493,29 +2517,32 @@ true
 
 **1，js作用域**
 
-作用域：在运行时代码中的某些特定部分中变量、函数和对象的可访问性。换句话说，作用域决定了代码区块中变量和其他资源的可见性，作用域就是一个独立的地盘，让变量不会外泄、暴露出去。**作用域最大作用**：隔离变量，不同作用域下同名变量不会有冲突
+作用域：在运行时代码中的某些特定部分中变量、函数和对象的**可访问性**。换句话说，作用域决定了代码区块中变量和其他资源的可见性，作用域就是一个独立的地盘，让变量不会外泄、暴露出去。
 
-作用域是分层的，内层作用域可以访问外层作用域的变量，反之不行
+**作用域最大作用**：隔离变量，不同作用域下同名变量不会有冲突
+
+作用域是分层的，**内层作用域可以访问外层作用域的变量**，反之不行
 
 **2， JavaScript 没有块级作用域（ES6之前）**，只有全局作用域和函数作用域，ES6引入块级作用域（相关知识会在第5章中分析）
 
 全局作用域（浏览器）：window
 
-最外层函数 和在最外层函数外面定义的变量拥有全局作用域
+- 最外层函数 和在最外层函数外面定义的变量拥有全局作用域
 
-所有末定义直接赋值的变量自动声明为拥有全局作用域
+- **所有末定义直接赋值的变量自动声明为拥有全局作用域**
+- 所有window对象的属性拥有全局作用域，如window.name、window.location、window.top等
 
-所有window对象的属性拥有全局作用域，如window.name、window.location、window.top等
+- nodejs 的全局对象：global，**声明全局变量的方式为: global.变量名**
 
-nodejs 的全局对象：global，**声明全局变量的方式为: global.变量名**
+- 在各个模块下都可以直接访问 global 对象
 
-在各个模块下都可以直接访问 global 对象
+- 一个文件就是一个模块，通过 require 引入模块
 
-一个文件就是一个模块，通过 require 引入模块
 
 函数作用域：
 
-声明在函数内部的变量
+- 声明在函数内部的变量
+
 
 **3，作用域链**
 
@@ -2580,7 +2607,7 @@ console.log(a);
 a = 2;
 ```
 
-所有的声明（变量和函数）都会被“移动”到各自作用域的最前端，这个过程被称为 **变量（函数）提升**
+**所有的声明（变量和函数）都会被“移动”到各自作用域的最前端**，这个过程被称为 **变量（函数）提升**
 
 再看一个高频考题：
 
@@ -2615,7 +2642,7 @@ foo();
 
 首先， foo(...) {} 的位置被移到了 foo();的前面，**这是函数发生了提升**，在 foo(...) {} 中，为什么会输出 undefined，而不是10？
 
-原因：**JavaScript 中没有块级作用域，**所以 var a = 10会被 JavaScript 分为两步：var a; 会被提升到函数作用域中的最顶端，声明了一个局部变量 a，在 foo(...) {} 的函数作用域中，**这个重名局部变量 a 会屏蔽全局变量 a**，换句话说，在对 a 的赋值声明之前，在 foo(...) {}中，a 的值都是 undefined，无法进入 if(a) {...} 中，所以最后打印出来 undefined
+原因：**JavaScript 中没有块级作用域，**所以 var a = 10会被 JavaScript 分为两步：var a; **会被提升到函数作用域中的最顶端**，声明了一个局部变量 a，在 foo(...) {} 的函数作用域中，**这个重名局部变量 a 会屏蔽全局变量 a**，换句话说，在对 a 的赋值声明之前，在 foo(...) {}中，a 的值都是 undefined，无法进入 if(a) {...} 中，所以最后打印出来 undefined
 
 注意：在 JavaScript 中，函数有两种方式进行声明，函数声明会被提升，**但函数表达式却不会被提升**
 
