--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -10558,8 +10558,42 @@ nums1 中的所有整数同样出现在 nums2 中
 
 **进阶：**你可以设计一个时间复杂度为 `O(nums1.length + nums2.length)` 的解决方案吗？
 
-```
+**单调栈 + 哈希表**
 
+倒序遍历nums2  ，并用单调栈中维护当前位置右边的更大的元素列表，从栈底到栈顶的元素是单调递减的。具体地，每次我们移动到数组中一个新的位置 i，就将当前单调栈中所有小于nums2[i] 的元素弹出单调栈，当前位置右边的第一个更大的元素即为栈顶元素，如果栈为空则说明当前位置右边没有更大的元素。随后我们将位置 i 的元素入栈。
+
+```js
+/**
+ * @param {number[]} nums1
+ * @param {number[]} nums2
+ * @return {number[]}
+ */
+var nextGreaterElement = function(nums1, nums2) {
+    let len1 = nums1.length, len2 = nums2.length;
+    let ans = new Array(len1);
+    const m = new Map();
+    const stack = [];
+    for (let i = len2 - 1; i>=0; i--){
+        while(stack.length && stack[stack.length - 1] <= nums2[i]){
+            stack.pop();
+        }
+        if (stack.length) {
+            m.set(nums2[i], stack[stack.length - 1]);
+        }else{
+            m.set(nums2[i], -1);
+        }
+        stack.push(nums2[i]);
+    }
+    for (let i = 0; i < len1; i++){
+        ans[i] = m.get(nums1[i]);
+    }
+    return ans;
+
+};
+
+let nums1 = [4,1,2], nums2 = [1,3,4,2];
+let result = nextGreaterElement(nums1, nums2);
+console.log(result);
 ```
 
 
