--- a/牛客刷题题目/前端岗面试高频题.md
+++ b/牛客刷题题目/前端岗面试高频题.md
@@ -2728,7 +2728,7 @@ console.log(a.b); //TypeError: Cannot read properties of undefined (reading 'b')
 console.log(b)  //ReferenceError: b is not defined
 ```
 
-对 b 进行 RHS查询，在所有嵌套作用域中遍寻不到变量
+对 b 进行 **RHS**查询，在所有嵌套作用域中遍寻不到变量
 
 **SyntaxError：**语法错误（给关键字赋值、变量名不符合规范）
 
@@ -2778,7 +2778,7 @@ decodeURI("%")     // URIError: URI malformed
 
 LHS和RHS就是js对变量的两种查找操作， 查找的过程是由作用域（词法作用域）进行协助，在编译的第二步中执行
 
-LHS（Left-hand Side）和RHS（Right-hand Side）通常是指等号（赋值运算）的**左右边的查询**，但并不一定意味就是"="的左侧和右侧，赋值操作还有其他几种形式，因此在概念上最好将其理解为：“赋值操作的目标是谁（LHS）”以及“谁是赋值操作的源头（RHS）”
+LHS（Left-hand Side）和RHS（Right-hand Side）通常是指**等号（赋值运算）**的**左右边的查询**，但并不一定意味就是"="的左侧和右侧，赋值操作还有其他几种形式，因此在概念上最好将其理解为：**“赋值操作的目标是谁**（LHS）”以及“**谁是赋值操作的源头**（RHS）”
 
 可以参考下面代码加以理解：
 
@@ -2877,7 +2877,7 @@ for(var i=0;i<5;i++){
         setTimeout(function(num){
             return function(){ //用匿名函数打造一个num变量副本
             	console.log(num);   // 输出0，1，2，3，4 
-            }    
+            }
         }(i), i*1000);
 } 
 ```
@@ -2885,9 +2885,9 @@ for(var i=0;i<5;i++){
 **闭包缺点：**
 
 - 闭包会导致变量不会被垃圾回收机制所清除，会大量消耗内存
-- 使用不恰当可能会造成内存泄漏的问题
+- 使用不恰当可能会造成**内存泄漏**的问题
 
-避免闭包引起的内存泄漏：
+**避免闭包引起的内存泄漏**：
 
 1、在退出函数之前，将不使用的局部变量全部删除或者赋值为null
 
