--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -9571,6 +9571,61 @@ var countSegments = function(s) {
 
 ---
 
+## 436. 寻找右区间
+
+给你一个区间数组 intervals ，其中 intervals[i] = [starti, endi] ，且每个 starti 都 不同 。
+
+区间 i 的 右侧区间 可以记作区间 j ，并满足 startj >= endi ，且 startj 最小化 。
+
+返回一个由每个区间 i 的 右侧区间 在 intervals 中对应下标组成的数组。如果某个区间 i 不存在对应的 右侧区间 ，则下标 i 处的值设为 -1 。
+
+提示：
+
+1 <= intervals.length <= 2 * 104
+intervals[i].length == 2
+-106 <= starti <= endi <= 106
+每个间隔的起点都 不相同
+
+```js
+/**
+ * @param {number[][]} intervals
+ * @return {number[]}
+ */
+var findRightInterval = function(intervals) {
+    let n = intervals.length;
+    if (n === 1) {
+        return [-1];
+    }
+    const m = new Map();
+    let maxStart = intervals[0][0];
+    for (let i = 0; i < n; i++){
+        m.set(intervals[i][0], i);
+        maxStart = Math.max(maxStart, intervals[i][0]);
+    }
+    let ans = [];
+    for (let i = 0; i < n; i++){
+        let end = intervals[i][1];
+        if (end > maxStart) {
+            ans.push(-1);
+        }else{
+            while(!m.has(end)){
+                end++;
+            }
+            ans.push(m.get(end));
+        }
+    }
+    return ans;
+};
+```
+
+
+
+
+
+
+
+----
+
 ## 441. 排列硬币
 
 你总共有 n 枚硬币，并计划将它们按阶梯状排列。对于一个由 k 行组成的阶梯，其第 i 行必须正好有 i 枚硬币。阶梯的最后一行 可能 是不完整的。
@@ -10594,6 +10649,150 @@ var nextGreaterElement = function(nums1, nums2) {
 let nums1 = [4,1,2], nums2 = [1,3,4,2];
 let result = nextGreaterElement(nums1, nums2);
 console.log(result);
+```
+
+---
+
+## 500. 键盘行
+
+给你一个字符串数组 words ，只返回可以使用在 美式键盘 同一行的字母打印出来的单词。键盘如下图所示。
+
+美式键盘 中：
+
+第一行由字符 "qwertyuiop" 组成。
+第二行由字符 "asdfghjkl" 组成。
+第三行由字符 "zxcvbnm" 组成。
+
+提示：
+
+1 <= words.length <= 20
+1 <= words[i].length <= 100
+words[i] 由英文字母（小写和大写字母）组成
+
+```js
+/**
+ * @param {string[]} words
+ * @return {string[]}
+ */
+var findWords = function(words) {
+    let strs = ["qwertyuiop", "asdfghjkl", "zxcvbnm"];
+    const m = new Map();
+    strs.forEach((item, index) => {
+        for (let char of item){
+            m.set(char,index);
+        }
+    });
+    const ans = [];
+    for (let i = 0; i < words.length; i++){
+        let line = m.get(words[i][0].toLowerCase());
+        let flag = true;
+        for (let j = 1; j <words[i].length; j++){
+            if (m.get(words[i][j].toLowerCase()) !== line) {
+                flag = false;
+                break;
+            }
+        }
+        if (flag) {
+            ans.push(words[i]);
+        }
+    }
+    return ans;
+};
+
+let words = ["Hello","Alaska","Dad","Peace"];
+let result = findWords(words);
+console.log(result);
+```
+
+```js
+var findWords = function(words) {
+    const list = [];
+    const rowIdx = "12210111011122000010020202";
+    for (const word of words) {
+        let isValid = true;
+        const idx = rowIdx[word[0].toLowerCase().charCodeAt() - 'a'.charCodeAt()];
+        for (let i = 1; i < word.length; ++i) {
+            if (rowIdx[word[i].toLowerCase().charCodeAt() - 'a'.charCodeAt()] !== idx) {
+                isValid = false;
+                break;
+            }
+        }
+        if (isValid) {
+            list.push(word);
+        }
+    }
+    return list;
+};
+
+```
+
+---
+
+## 501. 二叉搜索树中的众数
+
+给你一个含重复值的二叉搜索树（BST）的根节点 root ，找出并返回 BST 中的所有 众数（即，出现频率最高的元素）。
+
+如果树中有不止一个众数，可以按 任意顺序 返回。
+
+假定 BST 满足如下定义：
+
+结点左子树中所含节点的值 小于等于 当前节点的值
+结点右子树中所含节点的值 大于等于 当前节点的值
+左子树和右子树都是二叉搜索树
+
+提示：
+
+树中节点的数目在范围 [1, 104] 内
+-105 <= Node.val <= 105
+
+
+进阶：你可以不使用额外的空间吗？（假设由递归产生的隐式调用栈的开销不被计算在内）
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ */
+var findMode = function(root) {
+    let ans = [];
+    let maxCount = 0, count = 0, base = 0;
+
+    const update = (x) => {
+        if (x === base) {
+            ++count;
+        }else{
+            count = 1;
+            base = x;
+        }
+        if (count === maxCount) {
+            ans.push(base)
+        }
+        if (count > maxCount){
+            maxCount = count;
+            ans = [base];
+        }
+    }
+
+    const dfs = (p) => {
+        if (!p) {
+            return;
+        }
+        dfs(p.left);
+        update(p.val);
+        dfs(p.right);
+    }
+    
+    dfs(root);
+    return ans;
+};
 ```
 
 
