--- a/牛客刷题题目/前端岗面试高频题.md
+++ b/牛客刷题题目/前端岗面试高频题.md
@@ -3735,7 +3735,7 @@ obj2.obj3.foo();  // undefined
 
 #### 隐式丢失
 
-在一些特殊情况下，会存在隐式绑定丢失问题，最常见：参数传递、变量赋值
+在一些特殊情况下，**会存在隐式绑定丢失问题**，最常见：参数传递、变量赋值
 
 **参数传递**
 
@@ -3801,6 +3801,7 @@ let obj3={
 foo();  // 4
 foo.call(obj1);  // 1
 foo.apply(obj2);  // 2
+
 foo.bind(obj3)();  // 3
 
 foo.apply(null);  // 4
@@ -3813,7 +3814,7 @@ foo.bind(undefined)();  // 4
 
 通常，js中调用一个函数时（函数调用），函数处于一个被动的状态，**而call与apply让函数从被动变主动**，函数能主动选择自己的上下文，这种写法又称之为**函数应用**
 
-注意：若使用函数应用的方法改变this指向时，指向参数是null或者undefined，那么 this 将指向全局对象
+注意：若使用函数应用的方法改变this指向时，**指向参数是null或者undefined，那么 this 将指向全局对象**
 
 ### 4.new 绑定
 
@@ -3839,15 +3840,15 @@ console.log(obj.a);  // 1
 
 new绑定 > 隐式绑定 > 默认绑定
 
-注意：不存在显式绑定和new绑定同时生效的场景，若同时写会直接报错
+注意：**不存在显式绑定和new绑定同时生效的场景**，若同时写会直接报错
 
 ---
 
 ### **1、作用域链与原型链有什么区别？**
 
-作用域链：当**访问一个变量**时，首先在当前作用域查找标识符，如果没有找到就去父作用域找，作用域链顶端是全局对象window，如果window都没有这个变量则**报错**
+作用域链：当**访问一个变量**时，首先在当前作用域查找标识符，如果没有找到就去**父作用域**找，作用域链**顶端**是全局对象window，如果window都没有这个变量则**报错**
 
-原型链：当**在对象上访问某属性**时，首先会查找当前对象，如果没有就顺着原型链往上找，原型链顶端是null，如果全程都没找到则**返回undefined**，而不是报错
+原型链：当**在对象上访问某属性**时，首先会查找当前对象，如果没有就顺着**原型链**往上找，原型链**顶端**是null，如果全程都没找到则**返回undefined**，而不是报错
 
 ---
 
@@ -3857,11 +3858,11 @@ call、apply与bind：都能用于改变this绑定
 
 **apply与call：**
 
-都是函数应用，指定this的同时也会执行函数，参数传递方式不同
+都是函数应用，**指定this的同时也会执行函数**，参数传递方式不同
 
 call与apply的绑定**只适用当前调用，调用完毕即失效**，下次要用还得重新绑
 
-**call：**接受一个参数列表，第一个参数指向this，其余的参数在函数执行时都会作为函数形参传入函数
+**call：**接受一个参数列表，第一个参数指向this，**其余的参数在函数执行时都会作为函数形参传入函数**
 
 **apply：**除了第一个参数作为this指向外，其它参数都被包裹在一个**数组**中，在函数执行时同样会作为形参传入
 
@@ -3880,9 +3881,9 @@ fn.apply(o, [2, 3]); // 6
 
 **bind：**
 
-绑定this后并不会立马执行，而是**返回一个全新的boundFcuntion绑定函数**
+绑定this后**并不会立马执行**，而是**返回一个全新的boundFcuntion绑定函数**
 
-bind属于**硬绑定**，返回的boundFunction的this指向无法再次通过bind、apply或 call 修改
+bind属于**硬绑定**，返回的boundFunction的this指向**无法再次**通过bind、apply或 call **修改**
 
 ```js
 let obj1={
@@ -3907,7 +3908,7 @@ fn1(4,4);  // 6
 fn1.call(obj2);  //6
 ```
 
-代码中， 当执行fn1时，本质上等于window.fn1()，如果this还能被改变，那this岂不是得指向window，那bind方法就毫无意义了
+代码中， 当执行fn1时，**本质上等于window.fn1()**，如果this还能被改变，那this岂不是得指向window，那bind方法就毫无意义了
 
 ----
 
