--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -10831,6 +10831,53 @@ let result=convertToBase7(num);
 console.log(result);
 ```
 
+---
+
+## 506. 相对名次
+
+给你一个长度为 n 的整数数组 score ，其中 score[i] 是第 i 位运动员在比赛中的得分。所有得分都 互不相同 。
+
+运动员将根据得分 决定名次 ，其中名次第 1 的运动员得分最高，名次第 2 的运动员得分第 2 高，依此类推。运动员的名次决定了他们的获奖情况：
+
+名次第 1 的运动员获金牌 "Gold Medal" 。
+名次第 2 的运动员获银牌 "Silver Medal" 。
+名次第 3 的运动员获铜牌 "Bronze Medal" 。
+从名次第 4 到第 n 的运动员，只能获得他们的名次编号（即，名次第 x 的运动员获得编号 "x"）。
+使用长度为 n 的数组 answer 返回获奖，其中 answer[i] 是第 i 位运动员的获奖情况。
+提示：
+
+n == score.length
+1 <= n <= 104
+0 <= score[i] <= 106
+
+```js
+/**
+ * @param {number[]} score
+ * @return {string[]}
+ */
+var findRelativeRanks = function(score) {
+    const ans = new Array(score.length);
+    const m = new Map();
+    score.forEach((item, index) =>{
+        m.set(item, index);
+    });
+    const awards = ["Gold Medal","Silver Medal","Bronze Medal"];
+    score.sort((a, b) => b - a);
+    score.forEach((item, index) => {
+        if (index  < 3){
+            ans[m.get(item)] = awards[index];
+        }else{
+            ans[m.get(item)] = (index + 1).toString();
+        }
+    });
+    return ans;
+};
+
+let score = [10,3,8,9,4];
+let result = findRelativeRanks(score);
+console.log(result);
+```
+
 
 
 
@@ -10869,6 +10916,186 @@ let str1=121;
 let result=checkPerfectNumber(str1);
 console.log(result);
 ```
+
+---
+
+## 509. 斐波那契数
+
+斐波那契数 （通常用 F(n) 表示）形成的序列称为 斐波那契数列 。该数列由 0 和 1 开始，后面的每一项数字都是前面两项数字的和。也就是：
+给定 n ，请计算 F(n) 。
+
+```js
+/**
+ * @param {number} n
+ * @return {number}
+ */
+var fib = function(n) {
+    if (n < 2) {
+        return n;
+    }
+    let f0 = 0, f1 = 1, f2 = 1;
+    let i = 2;
+    while(i <= n){
+        f2 = f0 + f1;
+        f0 = f1;
+        f1 = f2;
+        i++;
+    }
+    return f2;
+};
+```
+
+矩阵快速幂
+
+```js
+var fib = function(n) {
+    if (n < 2) {
+        return n;
+    }
+    const q = [[1, 1], [1, 0]];
+    const res = pow(q, n - 1);
+    return res[0][0];
+};
+
+const pow = (a, n) => {
+    let ret = [[1, 0], [0, 1]];
+    while (n > 0) {
+        if ((n & 1) === 1) {
+            ret = multiply(ret, a);
+        }
+        n >>= 1;
+        a = multiply(a, a);
+    }
+    return ret;
+}
+
+const multiply = (a, b) => {
+    const c = new Array(2).fill(0).map(() => new Array(2).fill(0));
+    for (let i = 0; i < 2; i++) {
+        for (let j = 0; j < 2; j++) {
+            c[i][j] = a[i][0] * b[0][j] + a[i][1] * b[1][j];
+        }
+    }
+    return c;
+}
+```
+
+通项公式
+
+```js
+var fib = function(n) {
+    const sqrt5 = Math.sqrt(5);
+    const fibN = Math.pow((1 + sqrt5) / 2, n) - Math.pow((1 - sqrt5) / 2, n);
+    return Math.round(fibN / sqrt5);
+};
+```
+
+---
+
+## 511. 游戏玩法分析 I
+
+```
++--------------+---------+
+| Column Name  | Type    |
++--------------+---------+
+| player_id    | int     |
+| device_id    | int     |
+| event_date   | date    |
+| games_played | int     |
++--------------+---------+
+```
+
+表的主键是 (player_id, event_date)。
+这张表展示了一些游戏玩家在游戏平台上的行为活动。
+每行数据记录了一名玩家在退出平台之前，当天使用同一台设备登录平台后打开的游戏的数目（可能是 0 个）。
+
+
+写一条 SQL 查询语句获取每位玩家 第一次登陆平台的日期。
+
+查询结果的格式如下所示：
+
+Activity 表：
+
+```
++-----------+-----------+------------+--------------+
+| player_id | device_id | event_date | games_played |
++-----------+-----------+------------+--------------+
+| 1         | 2         | 2016-03-01 | 5            |
+| 1         | 2         | 2016-05-02 | 6            |
+| 2         | 3         | 2017-06-25 | 1            |
+| 3         | 1         | 2016-03-02 | 0            |
+| 3         | 4         | 2018-07-03 | 5            |
++-----------+-----------+------------+--------------+
+```
+
+Result 表：
+
+```
++-----------+-------------+
+| player_id | first_login |
++-----------+-------------+
+| 1         | 2016-03-01  |
+| 2         | 2017-06-25  |
+| 3         | 2016-03-02  |
++-----------+-------------+
+```
+
+```sql
+select 
+    player_id,
+    min(event_date) first_login
+from activity
+group by player_id
+```
+
+---
+
+## 520. 检测大写字母
+
+我们定义，在以下情况时，单词的大写用法是正确的：
+
+全部字母都是大写，比如 "USA" 。
+单词中所有字母都不是大写，比如 "leetcode" 。
+如果单词不只含有一个字母，只有首字母大写， 比如 "Google" 。
+给你一个字符串 word 。如果大写用法正确，返回 true ；否则，返回 false 。
+
+提示：
+
+1 <= word.length <= 100
+word 由小写和大写英文字母组成
+
+```js
+/**
+ * @param {string} word
+ * @return {boolean}
+ */
+var detectCapitalUse = function(word) {
+    let reg = /(^[A-Z]+$)|(^[A-Z][a-z]+$)|(^[a-z]+$)/g;
+    return reg.test(word);
+};
+let word = "FlaG";
+let result = detectCapitalUse(word);
+console.log(result);
+```
+
+```js
+var detectCapitalUse = function(word) {
+    // 若第 1 个字母为小写，则需额外判断第 2 个字母是否为小写
+    if (word.length >= 2 && word[0] === word[0].toLowerCase() && word[1] === word[1].toUpperCase()) {
+        return false;
+    }
+    
+    // 无论第 1 个字母是否大写，其他字母必须与第 2 个字母的大小写相同
+    for (let i = 2; i < word.length; ++i) {
+        if (word[i] === word[i].toLowerCase() ^ word[1] === word[1].toLowerCase()) {
+            return false;
+        }
+    }
+    return true;
+};
+```
+
+
 
 
 ---
@@ -13990,6 +14217,98 @@ let arr = [2,1,2,1,1,1,2,2];
 let result=canReorderDoubled(arr);
 console.log(result);
 ```
+
+---
+
+## 961. 在长度 2N 的数组中找出重复 N 次的元素
+
+给你一个整数数组 nums ，该数组具有以下属性：
+
+nums.length == 2 * n.
+nums 包含 n + 1 个 不同的 元素
+nums 中恰有一个元素重复 n 次
+找出并返回重复了 n 次的那个元素。
+
+提示：
+
+2 <= n <= 5000
+nums.length == 2 * n
+0 <= nums[i] <= 104
+nums 由 n + 1 个 不同的 元素组成，且其中一个元素恰好重复 n 次
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var repeatedNTimes = function(nums) {
+    let n = nums.length / 2;
+    let m = new Map();
+    for (let i = 0; i < 2 * n; i++){
+        m.set(nums[i], m.has(nums[i]) ? m.get(nums[i]) + 1 : 1);
+        if (m.get(nums[i]) === n) {
+            return nums[i];
+        }
+    }
+};
+
+let nums = [1,2,3,3];
+let result = repeatedNTimes(nums);
+console.log(result);
+```
+
+那么数组中剩余的元素均只出现了一次。也就是说，我们只需要找到重复出现的元素即为答案。
+
+```js
+var repeatedNTimes = function(nums) {
+    const found = new Set();
+    for (const num of nums) {
+        if (found.has(num)) {
+            return num;
+        }
+        found.add(num);
+    }
+    // 不可能的情况
+    return -1;
+};
+
+```
+
+
+
+我们可以每次随机选择两个不同的下标，判断它们对应的元素是否相等即可。如果相等，那么返回任意一个作为答案。
+
+```js
+var repeatedNTimes = function(nums) {
+    const n = nums.length;
+
+    while (true) {
+        const x = Math.floor(Math.random() * n), y = Math.floor(Math.random() * n);
+        if (x !== y && nums[x] === nums[y]) {
+            return nums[x];
+        }
+    }
+};
+```
+
+我们只需要遍历所有间隔 2 个位置及以内的下标对，判断对应的元素是否相等即可。
+
+```js
+var repeatedNTimes = function(nums) {
+    const n = nums.length;
+    for (let gap = 1; gap <= 3; ++gap) {
+        for (let i = 0; i + gap < n; ++i) {
+            if (nums[i] === nums[i + gap]) {
+                return nums[i];
+            }
+        }
+    }
+    // 不可能的情况
+    return -1;
+};
+```
+
+---
 
 
 
