--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -10100,6 +10100,55 @@ console.log(result);
 
 ---
 
+## 464. 我能赢吗
+
+在 "100 game" 这个游戏中，两名玩家轮流选择从 1 到 10 的任意整数，累计整数和，先使得累计整数和 达到或超过  100 的玩家，即为胜者。
+
+如果我们将游戏规则改为 “玩家 不能 重复使用整数” 呢？
+
+例如，两个玩家可以轮流从公共整数池中抽取从 1 到 15 的整数（不放回），直到累计整数和 >= 100。
+
+给定两个整数 maxChoosableInteger （整数池中可选择的最大数）和 desiredTotal（累计和），若先出手的玩家是否能稳赢则返回 true ，否则返回 false 。假设两位玩家游戏时都表现 最佳 。
+
+
+提示:
+
+1 <= maxChoosableInteger <= 20
+0 <= desiredTotal <= 300
+
+记忆化搜索 + 状态压缩
+
+```
+var canIWin = function(maxChoosableInteger, desiredTotal) {
+    const memo = new Map();
+    const dfs = (maxChoosableInteger, usedNumbers, desiredTotal, currentTotal) => {
+        if (!memo.has(usedNumbers)) {
+            let res = false;
+            for (let i = 0; i < maxChoosableInteger; i++) {
+                if (((usedNumbers >> i) & 1) === 0) {
+                    if (i + 1 + currentTotal >= desiredTotal) {
+                        res = true;
+                        break;
+                    }
+                    if (!dfs(maxChoosableInteger, usedNumbers | (1 << i), desiredTotal, currentTotal + i + 1)) {
+                        res = true;
+                        break;
+                    }
+                }
+            }
+            memo.set(usedNumbers, res);
+        }
+        return memo.get(usedNumbers);
+    }
+    if ((1 + maxChoosableInteger) * (maxChoosableInteger) / 2 < desiredTotal) {
+        return false;
+    }
+    return dfs(maxChoosableInteger, 0, desiredTotal, 0);
+};
+```
+
+
+
 
 
 
@@ -11153,6 +11202,55 @@ var findLUSlength = function(a, b) {
 };
 ```
 
+---
+
+## 530. 二叉搜索树的最小绝对差
+
+给你一个二叉搜索树的根节点 root ，返回 树中任意两不同节点值之间的最小差值 。
+
+差值是一个正数，其数值等于两值之差的绝对值。
+提示：
+
+树中节点的数目范围是 [2, 104]
+0 <= Node.val <= 105
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {number}
+ */
+var getMinimumDifference = function(root) {
+    let minDiff = Number.MAX_SAFE_INTEGER;
+    let lastValue = -1;
+    const dfs = (head) =>{
+        if (head === null) {
+            return;
+        }
+        dfs(head.left);
+        if (lastValue === -1) {
+            lastValue = head.val;
+        }else{
+            minDiff = Math.min(minDiff, head.val - lastValue);
+            if (minDiff === 0) {
+                return 0;
+            }
+            lastValue = head.val;
+        }
+        dfs(head.right);
+    }
+    dfs(root);
+    return minDiff;
+};
+```
+
 
 
 
@@ -11236,6 +11334,63 @@ console.log(result);
 
 
 ---
+## 541. 反转字符串 II
+
+给定一个字符串 s 和一个整数 k，从字符串开头算起，每计数至 2k 个字符，就反转这 2k 字符中的前 k 个字符。
+
+如果剩余字符少于 k 个，则将剩余字符全部反转。
+如果剩余字符小于 2k 但大于或等于 k 个，则反转前 k 个字符，其余字符保持原样。
+
+提示：
+
+1 <= s.length <= 104
+s 仅由小写英文组成
+1 <= k <= 104
+
+```js
+/**
+ * @param {string} s
+ * @param {number} k
+ * @return {string}
+ */
+var reverseStr = function(s, k) {
+    s = s.split("");
+    let left = 0, right = s.length - 1;
+    while(left < right){
+        let ret = right - left + 1;
+        if (ret >= 2 * k) {
+            swap(s, left, left + k -1);
+            left += 2 * k;
+        }else if (ret < 2 * k && ret >= k){
+            swap(s, left, left + k -1);
+            break;
+        }else if (ret < k) {
+            swap(s, left, right);
+            break;
+        }
+    }
+    return s.join("");
+};
+
+var swap = function(s, left, right){
+    while(left < right){
+        let temp = s[left];
+        s[left] = s[right];
+        s[right] = temp;
+        left++;
+        right--;
+    }
+}
+
+let s = "abcdefg", k = 2;
+let result = reverseStr(s, k);
+console.log(result);
+```
+
+
+
+---
+
 ## 553.最优除法
 
 给定一组正整数，相邻的整数之间将会进行浮点除法操作。例如， [2,3,4] -> 2 / 3 / 4 。
