--- a/牛客刷题题目/前端岗面试高频题.md
+++ b/牛客刷题题目/前端岗面试高频题.md
@@ -3963,7 +3963,7 @@ fn1.call(obj2);  //6
 //使用递归的方式实现数组、对象的深拷贝
 
 function deepClone(obj){
-	//判断拷贝的要进行深拷贝的是数组还是对象，是数组的话进行数组拷贝，对象的话进行对象拷贝
+	//判断要进行深拷贝的是数组还是对象，是数组的话进行数组拷贝，对象的话进行对象拷贝
 	var objClone=Array.isArray(obj) ? [] : {};
 	//进行深拷贝的不能为空，并且是对象
 	if (obj && typeof obj === "object") {
@@ -3999,7 +3999,7 @@ console.log(obj2.b.c);  //66
 
 2. 借助JSON对象的parse和stringify
 
-利用js的内置对象JSON来进行数组对象的深拷贝，缺点：无法实现对象中方法的深拷贝
+利用js的内置对象JSON来进行**数组对象**的深拷贝，缺点：无法实现对象中**方法**的深拷贝
 
 ```js
 function deepClone(obj){
@@ -4007,6 +4007,24 @@ function deepClone(obj){
 	var objClone=JSON.parse(_obj);
 	return objClone;
 }
+
+let nums = [1, 2, 3];
+let nums2 = deepClone(nums);
+nums[1] = 4;
+console.log(nums);  //  [ 1, 4, 3 ]
+console.log(nums2);  //  [ 1, 2, 3 ]
+
+let obj = {
+	a: 1,
+	foo : function(){
+		console.log("foo");
+	}
+}
+
+let obj2 = deepClone(obj);
+
+console.log(obj);  //  { a: 1, foo: [Function: foo] }
+console.log(obj2);  //  { a: 1 }
 ```
 
 stringify() → JavaScript对象序列化为JSON字符串
@@ -4022,7 +4040,7 @@ var newArray = $.extend(true,[],array);
 
 4. Object.assign()拷贝
 
-当对象中只有一级属性，没有二级属性的时候，此方法为深拷贝，但是对象中有对象的时候，此方法，在二级属性以后就是浅拷贝
+当对象中只有一级属性，没有二级属性的时候，此方法为深拷贝，但是对象中有对象的时候，**此方法，在二级属性以后就是浅拷贝**
 
 ```js
 
@@ -4035,13 +4053,14 @@ let obj1={
 	e:true
 }
 
-let obj2=Object.assign(obj1);
+let obj2=Object.assign({}, obj1);
 
 obj2.b.c=66;
 obj2.a=10;
 
-console.log(obj1.a);  //10
+console.log(obj1.a);  //1
 console.log(obj2.a);  //10
+
 console.log(obj1.b.c);  //66
 console.log(obj2.b.c);  //66
 ```
@@ -4089,7 +4108,7 @@ console.log(obj2.b.c);  //66
 
 利用for in 循环遍历对象和对象原型上的**可枚举属性**
 
-缺点：只能遍历可枚举属性，若一个对象上只有不可枚举属性的话，会判断错误
+缺点：**只能遍历可枚举属性**，若一个对象上只有不可枚举属性的话，会判断错误
 
 ```js
 function isEmptyObj(obj){
@@ -4116,7 +4135,7 @@ console.log(isEmptyObj(c));  // true
 console.log(Object.keys(obj).length===0)
 ```
 
-Object.keys能返回对象自身上所有可枚举属性的名称所构成的数组，若数组长度为0，那就是一个空对象
+Object.keys能返回对象自身上**所有可枚举属性的名称**所构成的数组，若数组长度为0，那就是一个空对象
 
 缺点：如for in断一样，Object.keys方法也只返回可枚举属性
 
@@ -4154,7 +4173,7 @@ console.log(Object.getOwnPropertyNames(obj).length == 0)
 
 Object.getOwnPropertyNames方法获取到对象中的属性名，存到一个数组中，返回数组对象，若数组长度为0，则是空对象
 
-缺点：此方法是Object.keys的改进，可获取到不可枚举属性，**但该方法无法获取Symbol属性**
+缺点：此方法是Object.keys的改进，**可获取到不可枚举属性**，**但该方法无法获取Symbol属性**
 
 ```js
 let a={
@@ -4174,7 +4193,7 @@ console.log(Object.getOwnPropertyNames(c).length===0);  // false
 console.log(Reflect.ownKeys(obj).length===0)
 ```
 
-Reflect.ownKeys也可以返回对象自身属性名所构成的数组，该方法可以返回不可枚举属性以及Symbol属性
+Reflect.ownKeys也可以返回对象自身属性名所构成的数组，**该方法可以返回不可枚举属性以及Symbol属性**
 
 ```js
 let a={
@@ -4192,7 +4211,7 @@ console.log(Reflect.ownKeys(c).length===0);  // TypeError: Reflect.ownKeys calle
 
 ### **1、什么可枚举属性？什么是不可枚举属性？**
 
-可枚举属性是指内部可枚举标志（enumerable）设置为true的属性，不可枚举属性即是enumerable为false（摘自MDN）
+可枚举属性是指内部**可枚举标志**（enumerable）设置为true的属性，不可枚举属性即是enumerable为false（摘自MDN）
 
 ---
 
@@ -4241,7 +4260,7 @@ arr.forEach((item,index,array)=>{
 
   **3.** **map（）**
 
-创建一个新的数组，新数组的每一个元素由调用数组中的每一个元素执行提供的函数得来，有return返回值
+**创建一个新的数组，新数组的每一个元素由调用数组中的每一个元素执行提供的函数得来**，有return返回值
 
 return的意义：不影响原来的数组，**只是把原数组克隆一份**，改变克隆的数组中的对应项
 
@@ -4260,11 +4279,11 @@ console.log(b);  // [ 1, 4, 9, 16, 25 ]
 
   **5.** **for of**
 
-遍历value，适用遍历数组对象、字符串、map、set等**拥有迭代器对象**的集合，**不能遍历对象**，因为没有迭代器
+遍历value，适用遍历数组对象、字符串、map、set等**拥有迭代器对象**的集合，**不能遍历对象**，**因为没有迭代器**
 
 与forEach()区别：可以正确响应break、continue和return语句
 
-与for in 区别：无法循环遍历对象，不会遍历自定义属性
+与for in 区别：无法循环遍历对象，**不会遍历自定义属性**
 
 ```js
 for (var value of arr) { 
@@ -4291,7 +4310,7 @@ for (let o of obj){  //TypeError: obj is not iterable
 
 接收一个函数作为累加器，数组中的每个值（从左到右）开始缩减，得出最终计算值
 
-相当于：为数组中的每一个元素依次执行回调函数，不包括数组中被删除或从未被赋值的元素
+相当于：**为数组中的每一个元素依次执行回调函数**，不包括数组中被删除或从未被赋值的元素
 
 ```js
 arr.reduce(function(total, currentValue, currentIndex, arr), initialValue)
@@ -4316,8 +4335,8 @@ arr.reduce(function(total, currentValue, currentIndex, arr), initialValue)
 ```js
 let a=[1,2,3,4,5];
 
-console.log(a.reduce((prev,curr,index,arr)=>prev+curr));  //15
-console.log(a.reduce((prev,curr,index,arr)=>prev*curr));  //120
+console.log(a.reduce((prev,curr,index,arr) => prev+curr));  //15
+console.log(a.reduce((prev,curr,index,arr) => prev*curr));  //120
 
 ```
 
